# tdd-with-python

./: .gitignore  README.md  functional_tests.py  justfile  pyproject.toml
.cursor/commands/: functional-test.md
functional_tests/: functional_tests.py  tests.py
lists/: models.py  tests.py  views.py
lists/migrations/: 0001_initial.py  0002_item_text.py  0003_list_item_list.py  0004_alter_item_list.py
lists/templates/: base.html  home.html
superlists/: settings.py  urls.py
