[project]
name = "tdd-with-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django<6",
    "selenium>=4.38.0",
]

[dependency-groups]
dev = [
    "beautifulsoup4>=4.14.3",
    "django-stubs[compatible-mypy]>=5.2.7",
    "isort>=7.0.0",
    "mypy>=1.18.2",
    "ruff>=0.14.6",
]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "superlists.settings"
